[package]
name = "bevy_seedling"
version = "0.4.0"
edition = "2024"
rust-version = "1.85.0"
license = "MIT OR Apache-2.0"
authors = ["Corvus Prudens <corvusprudens@gmail.com>"]
description = "A sprouting integration of the Firewheel audio engine"
readme = "README.md"
repository = "https://github.com/corvusprudens/bevy_seedling"
documentation = "https://docs.rs/bevy_seedling"
keywords = ["gamedev", "audio", "bevy", "firewheel"]
categories = ["game-development", "multimedia::audio"]
exclude = ["/assets"]

[features]
default = ["stream", "wav", "ogg", "rand"]
stream = ["firewheel/stream_nodes"]
rand = ["dep:rand"]

# formats
wav = ["symphonium/wav", "symphonium/pcm"]
ogg = ["symphonium/ogg", "symphonium/vorbis"]
flac = ["symphonium/flac"]
mkv = ["symphonium/mkv"]

# codecs
mp3 = ["symphonium/mp3"]
adpcm = ["symphonium/adpcm"]

# Enables profiling and testing backend compilation.
# This is mainly intended for internal use.
profiling = []

[dependencies]
bevy = { version = "0.16", default-features = false, features = [
  "bevy_asset",
  "bevy_log",
  "std",
] }
bevy_math = { version = "0.16", default-features = false, features = ["curve"] }
firewheel = { version = "0.4.0", features = ["bevy", "spatial_basic_node"] }
symphonium = { version = "0.4", default-features = false, features = [
  "opt-simd",
  "fft-resampler",
] }
symphonia = "0.5"
serde = { version = "1.0", features = ["derive"] }
smallvec = "1.13"
bevy_seedling_macros = { path = "./seedling_macros", version = "0.4.0" }
rand = { version = "0.8", default-features = false, features = [
  "small_rng",
  "getrandom",
], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
firewheel = { version = "0.4.0", features = ["wasm-bindgen"] }

[dev-dependencies]
bevy = { version = "0.16", default-features = false, features = [
  "bevy_debug_stepping",
  "bevy_asset",
  "bevy_color",
  "bevy_state",
  "multi_threaded",
  "sysinfo_plugin",
  "std",
] }
criterion = { version = "0.5", default-features = false, features = [
  "plotters",
  "cargo_bench_support",
] }

[[bench]]
name = "basic"
harness = false
required-features = ["profiling"]
